tests/rustdoc-ui/doctest/emit-test.rs
//@ compile-flags:--test --emit=dep-info -Z unstable-options
//@ check-fail
//~? ERROR the `--test` flag and the `--emit` flag

//! This example intentionally left blank.
